--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
     "react": "^15.3.2",
+    "react-color": "^2.10.0",
     "react-dom": "^15.3.2",
     "redux": "^3.6.0",
     "redux-undo": "^0.6.1",
